--- a/Untitled7.ipynb
+++ b/Untitled7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcGBPHHQVEwyMQBEWZthWD",
+      "authorship_tag": "ABX9TyOneVzxPLTZ2xQB9hlyGegA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,25 +29,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hg0fWKdDtUic",
-        "outputId": "21e17797-f0de-450d-9f95-8824804213a4"
+        "outputId": "84ae3995-9211-4974-d8e0-c216ca03851c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Shakib Bokachoda\n"
+            "Shakib vodro chela\n"
           ]
         }
       ],
       "source": [
-        "print('Shakib Bokachoda')"
+        "print('Shakib vodro chela')"
       ]
     },
     {
